--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-items",
   "version": "1.0.0",
   "description": "",
-  "main": "create.js",
+  "main": "create_items.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node create.js"
