--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "create_items.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node create.js"
+    "start": "node create_items.js"
   },
   "author": "Gasegamer",
   "license": "ISC",
